--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "source-map": "^0.5.3",
     "supports-color": "^3.1.0",
     "tapable": "~0.2.5",
-    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
+    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
     "watchpack": "^1.3.1",
     "webpack-sources": "^0.2.3",
     "yargs": "^6.0.0"
